--- a/package.json
+++ b/package.json
@@ -39,22 +39,22 @@
     "winston": "~1.0.1"
   },
   "optionalDependencies": {
+    "fsevents": "*",
     "mysql": "~2.8.0",
     "nodecastor": "~0.1.7",
     "pg": "~4.4.1",
     "respawn": "~2.0.0",
-    "sqlite3": "~3.1.0",
-    "fsevents": "*"
+    "sqlite3": "^4.0.1"
   },
   "devDependencies": {
     "blanket": "~1.2.0",
     "connect-livereload": "~0.5.3",
     "grunt": "~0.4.2",
-    "grunt-cli": "~0.1.13",
     "grunt-angular-templates": "~0.5.3",
     "grunt-autoprefixer": "~3.0.3",
     "grunt-bower-task": "~0.4.0",
     "grunt-browserify": "~4.0.0",
+    "grunt-cli": "~0.1.13",
     "grunt-concurrent": "~2.0.1",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-concat": "~0.5.1",
