--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "nodecastor": "~0.1.7",
     "pg": "~4.4.1",
     "respawn": "~2.0.0",
-    "sqlite3": "^4.0.1"
+    "sqlite3": "~4.0.6"
   },
   "devDependencies": {
     "blanket": "~1.2.0",
@@ -83,7 +83,7 @@
     "should": "~7.0.2",
     "should-http": "0.0.4",
     "socket.io-client": "~1.4.0",
-    "sqlite3": "~3.1.0",
+    "sqlite3": "~4.0.6",
     "supertest": "~1.0.1",
     "time-grunt": "~1.2.1"
   },
