--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "body-parser": "~1.13.3",
     "errorhandler": "~1.4.2",
     "express": "~4.13.3",
+    "express-session": "^1.15.6",
     "express-winston": "~0.3.1",
     "glob": "~5.0.14",
     "http-auth": "~2.2.7",
+    "keycloak-connect": "^5.0.0",
     "later": "~1.1.6",
     "lodash": "~3.10.1",
     "method-override": "~2.3.5",
