--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "~2.9.34",
     "body-parser": "~1.13.3",
+    "bootstrap": "^4.3.1",
     "errorhandler": "~1.4.2",
     "express": "~4.13.3",
     "express-session": "^1.15.6",
