Grunt modification to build react

--- a/.jshintrc
+++ b/.jshintrc
@@ -7,8 +7,8 @@
   "curly": true,
   "eqeqeq": true,
   "immed": true,
+  "latedef": false,
   "indent": 2,
-  "latedef": true,
   "newcap": true,
   "noarg": true,
   "quotmark": "single",
