--- a/package.json
+++ b/package.json
@@ -51,44 +51,39 @@
   },
   "devDependencies": {
     "blanket": "~1.2.0",
-    "connect-livereload": "~0.5.3",
-    "grunt": "~0.4.2",
-    "grunt-angular-templates": "~0.5.3",
-    "grunt-autoprefixer": "~3.0.3",
-    "grunt-bower-task": "~0.4.0",
-    "grunt-browserify": "~4.0.0",
-    "grunt-cli": "~0.1.13",
-    "grunt-concurrent": "~2.0.1",
-    "grunt-contrib-clean": "~0.6.0",
-    "grunt-contrib-concat": "~0.5.1",
-    "grunt-contrib-connect": "~0.11.2",
-    "grunt-contrib-copy": "~0.8.0",
-    "grunt-contrib-csslint": "~0.5.0",
-    "grunt-contrib-cssmin": "~0.13.0",
-    "grunt-contrib-imagemin": "~1.0.1",
-    "grunt-contrib-jshint": "~0.11.2",
-    "grunt-contrib-less": "~1.0.1",
-    "grunt-contrib-uglify": "~0.9.1",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-env": "~0.4.1",
-    "grunt-express-server": "~0.5.1",
-    "grunt-filerev": "~2.3.1",
-    "grunt-filerev-assets": "~1.0.0",
-    "grunt-mocha-test": "~0.12.7",
-    "grunt-newer": "~1.1.1",
-    "grunt-ng-annotate": "~1.0.1",
-    "grunt-nodemon": "~0.4.0",
-    "grunt-svgmin": "~2.0.1",
-    "grunt-usemin": "~3.0.0",
-    "jshint-stylish": "~2.0.1",
-    "load-grunt-tasks": "~3.2.0",
+    "connect-livereload": "^0.6.1",
+    "grunt": "^1.0.4",
+    "grunt-autoprefixer": "^3.0.4",
+    "grunt-browserify": "^5.3.0",
+    "grunt-cli": "^1.3.2",
+    "grunt-concurrent": "^2.3.1",
+    "grunt-contrib-clean": "^2.0.0",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-connect": "^2.0.0",
+    "grunt-contrib-copy": "^1.0.0",
+    "grunt-contrib-imagemin": "^3.1.0",
+    "grunt-contrib-jshint": "^2.1.0",
+    "grunt-contrib-uglify": "^4.0.1",
+    "grunt-contrib-watch": "^1.1.0",
+    "grunt-env": "^0.4.4",
+    "grunt-exec": "^3.0.0",
+    "grunt-express-server": "^0.5.4",
+    "grunt-filerev": "^2.3.1",
+    "grunt-filerev-assets": "^1.0.0",
+    "grunt-mocha-test": "^0.13.3",
+    "grunt-newer": "^1.3.0",
+    "grunt-nodemon": "^0.4.2",
+    "grunt-svgmin": "^6.0.0",
+    "grunt-usemin": "^3.1.1",
+    "jshint-stylish": "^2.2.1",
+    "load-grunt-tasks": "^4.0.0",
     "mocha": "~1.20.0",
     "should": "~7.0.2",
     "should-http": "0.0.4",
     "socket.io-client": "~1.4.0",
     "sqlite3": "~4.0.6",
     "supertest": "~1.0.1",
-    "time-grunt": "~1.2.1"
+    "time-grunt": "^2.0.0"
   },
   "engines": {
     "node": ">=4.8"
