Admin front in progress, add redux to react and restore express.js to work with vanilla dashkiosk

--- a/front/package.json
+++ b/front/package.json
@@ -8,8 +8,11 @@
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "redux": "^4.0.1",
+    "socket.io-client": "1.4"
   },
   "scripts": {
     "start": "react-scripts start",
