--- a/front/package.json
+++ b/front/package.json
@@ -31,5 +31,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "host": "0.0.0.0",
+  "port": 3000,
+  "proxy": "http://127.0.0.1:9400"
 }
