--- a/front/package.json
+++ b/front/package.json
@@ -12,6 +12,7 @@
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-toastify": "^5.0.1",
     "redux": "^4.0.1",
     "socket.io-client": "1.4"
   },
