--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-toastify": "^5.0.1",
+    "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
     "socket.io-client": "1.4"
   },
