--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-sortable-hoc": "^1.8.3",
     "react-toastify": "^5.0.1",
     "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
