--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-icons": "^3.5.0",
+    "react-live-clock": "^3.1.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
