added package.json to try nodecastor

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mustache": "^2.2.1",
     "mustache-express": "^1.2.2",
     "nconf": "~0.7.2",
+    "nodecastor": "^0.1.8",
     "postal": "~1.0.6",
     "postal.diagnostics": "~0.7.3",
     "sequelize": "~1.7.0",
