--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "dashkiosk": "./server.js"
   },
   "scripts": {
-    "postinstall": "grunt dist",
-    "start": "node dist/forever.js dist/server.js --port $PORT",
-    "test": "grunt test"
+    "start": "node dist/forever.js dist/server.js",
+    "test": "grunt test",
+    "clean": "rm -rf dist && mkdir dist",
+    "dist": "yarn --silent clean && yarn --silent build-react && yarn --silent build-server && yarn --silent imagemin",
+    "build-react": "cd front && yarn install && yarn build && cd ../ && yarn --silent copy-react",
+    "build-server": "yarn --silent lint && yarn --silent copy-server",
+    "copy-react": "cp -r front/build/ dist/front",
+    "copy-server": "cp package.json dist/ && cp server.js dist/ && cp forever.js dist/ && cp -r lib/ dist && mkdir -p dist/db/migrations && cp -r db/migrations dist/db",
+    "lint": "eslint server.js && eslint lib/",
+    "imagemin": "imagemin -p dist/front/static/media/* --out-dir=dist/front/static/media",
+    "dev": "concurrently -n Server,Front -c \"bgRed.bold,bgBlue.bold\" \"yarn dev-server\" \"yarn dev-front\"",
+    "dev-server": "nodemon ./server.js",
+    "dev-front": "cd front && yarn start"
   },
   "repository": {
     "type": "git",
@@ -51,39 +61,18 @@
   },
   "devDependencies": {
     "blanket": "~1.2.0",
-    "connect-livereload": "^0.6.1",
-    "grunt": "^1.0.4",
-    "grunt-autoprefixer": "^3.0.4",
-    "grunt-browserify": "^5.3.0",
-    "grunt-cli": "^1.3.2",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^2.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^2.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-imagemin": "^3.1.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "grunt-contrib-uglify": "^4.0.1",
-    "grunt-contrib-watch": "^1.1.0",
-    "grunt-env": "^0.4.4",
-    "grunt-exec": "^3.0.0",
-    "grunt-express-server": "^0.5.4",
-    "grunt-filerev": "^2.3.1",
-    "grunt-filerev-assets": "^1.0.0",
-    "grunt-mocha-test": "^0.13.3",
-    "grunt-newer": "^1.3.0",
-    "grunt-nodemon": "^0.4.2",
-    "grunt-svgmin": "^6.0.0",
-    "grunt-usemin": "^3.1.1",
+    "concurrently": "^4.1.0",
+    "eslint": "^5.16.0",
+    "imagemin-cli": "^4.0.1",
     "jshint-stylish": "^2.2.1",
-    "load-grunt-tasks": "^4.0.0",
     "mocha": "~1.20.0",
+    "nodemon": "^1.19.0",
     "should": "~7.0.2",
     "should-http": "0.0.4",
     "socket.io-client": "~1.4.0",
     "sqlite3": "~4.0.6",
     "supertest": "~1.0.1",
-    "time-grunt": "^2.0.0"
+    "yarn": "^1.15.2"
   },
   "engines": {
     "node": ">=4.8"
