--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "~2.9.34",
     "body-parser": "~1.13.3",
+    "cors": "^2.8.5",
     "errorhandler": "~1.4.2",
     "express": "~4.13.3",
     "express-session": "^1.15.6",
@@ -30,6 +31,7 @@
     "later": "~1.1.6",
     "lodash": "~3.10.1",
     "method-override": "~2.3.5",
+    "multer": "^1.4.1",
     "mustache": "^2.2.1",
     "mustache-express": "^1.2.2",
     "nconf": "~0.7.2",
