--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bluebird": "~2.9.34",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "errorhandler": "~1.4.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
