--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "glob": "~5.0.14",
     "http-auth": "^3.2.3",
     "keycloak-connect": "^5.0.0",
-    "later": "~1.1.6",
     "lodash": "^3.10.1",
     "lodash-migrate": "^0.3.16",
     "method-override": "~2.3.5",
+    "moment": "^2.24.0",
     "multer": "^1.4.1",
     "mustache": "^2.2.1",
     "mustache-express": "^1.2.2",
