--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "nodecastor": "^0.1.8",
     "postal": "~1.0.6",
     "postal.diagnostics": "~0.7.3",
+    "prom-client": "^11.3.0",
     "pug": "^2.0.3",
     "sequelize": "~1.7.0",
     "serve-static": "^1.13.2",
