--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "url": "https://github.com/vincentbernat/dashkiosk.git"
   },
   "dependencies": {
+    "later": "~1.1.6",
     "bluebird": "~2.9.34",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
