--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "imagemin": "imagemin -p dist/front/static/media/* --out-dir=dist/front/static/media",
     "dev": "concurrently -n Server,Front -c \"bgRed.bold,bgBlue.bold\" \"yarn dev-server\" \"yarn dev-front\"",
     "dev-server": "nodemon ./server.js",
-    "dev-front": "cd front && yarn start"
+    "dev-front": "cd front && yarn start",
+    "docker-build": "docker build -t dashkiosk .",
+    "docker-run": "docker run -d -p 8080:8080 -v /var/lib/dashkiosk/database:/database --rm --name dashkiosk dashkiosk",
+    "docker-stop": "docker stop dashkiosk"
   },
   "repository": {
     "type": "git",
