--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "url": "https://github.com/vincentbernat/dashkiosk.git"
   },
   "dependencies": {
-    "later": "~1.1.6",
     "bluebird": "~2.9.34",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
@@ -43,6 +42,7 @@
     "glob": "~5.0.14",
     "http-auth": "^3.2.3",
     "keycloak-connect": "^5.0.0",
+    "later": "~1.1.6",
     "lodash": "^3.10.1",
     "lodash-migrate": "^0.3.16",
     "method-override": "~2.3.5",
@@ -56,6 +56,7 @@
     "postal.diagnostics": "~0.7.3",
     "prom-client": "^11.3.0",
     "pug": "^2.0.3",
+    "react-beautiful-dnd": "^11.0.3",
     "sequelize": "~1.7.0",
     "serve-static": "^1.13.2",
     "socket.io": "^2.2.0",
