--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
+    "du": "^0.1.0",
     "errorhandler": "~1.4.2",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-winston": "~0.3.1",
     "glob": "~5.0.14",
     "http-auth": "^3.2.3",
+    "jimp": "^0.6.4",
     "keycloak-connect": "^5.0.0",
     "later": "~1.1.6",
     "lodash": "^3.10.1",
