--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashkiosk",
+  "name": "keeosk",
   "description": "Drive a set of screens displaying dashboards",
   "url": "https://github.com/vincentbernat/dashkiosk",
   "license": "ISC",
