--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "du": "^1.0.0",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
