--- a/front/package.json
+++ b/front/package.json
@@ -25,7 +25,7 @@
     "socket.io-client": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=8080 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,6 +40,6 @@
     "not op_mini all"
   ],
   "host": "0.0.0.0",
-  "port": 3030,
+  "port": 8080,
   "proxy": "http://localhost:3000"
 }
