--- a/back/package.json
+++ b/back/package.json
@@ -7,7 +7,8 @@
   "nodemonConfig": {
     "ignore": [
       "Database/Migrations/*",
-      "*.db"
+      "*.db",
+      "public/*"
     ]
   },
   "scripts": {
