--- a/back/public/settings/config.json
+++ b/back/public/settings/config.json
@@ -1,1 +1,1 @@
-{"useBranding":false,"timezone":"Europe/Paris","background_choice":"color","background_color":"#1c1a1f","background_image":"","loading_image":"","stamp":"","unassigned":["/api/public/settings/unassigned/unassigned1564669459551_blackgoku.jpeg"],"images":false,"newImageUrl":"/api/public/settings/unassigned/unassigned1564669459551_blackgoku.jpeg"}
+{"useBranding":false,"timezone":"Europe/Paris","background_choice":"color","background_color":"#1c1a1f","background_image":"","loading_image":"","stamp":"","unassigned":[""]}
